--- a/css/main.css
+++ b/css/main.css
@@ -28,10 +28,14 @@ html, body {
     background-position: center;
     z-index: 0;
     float: left;
-}
-.imageCover.animated {
     transition: filter 1s 0s;
-    filter: blur(4px) brightness(70%);
+}
+/* .imageCover.animated { */
+.imageCover.animated,
+.imageCover.blur {
+/* #secondTab:hover .imageCover.animated { */
+    transition: filter 1s 0s;
+    filter: blur(7px) brightness(60%);
 }
 .imageCover.animated:hover {
     transition: filter 1s .3s;
@@ -281,7 +285,7 @@ ul#topBar {
 
 ul#topBar #windowTitle {
     color: #fff;
-    text-shadow: 0 1px 5px rgba(0, 0, 0, .35);
+    text-shadow: 0 1px 8px rgba(0, 0, 0, .3);
     margin: 12px;
 }
 
