--- a/css/main.css
+++ b/css/main.css
@@ -227,6 +227,7 @@ button.btn {
     font-size: 10pt;
     margin: 4px 6px 4px 4px;
     text-shadow: 0 0 3px rgba(0, 0, 0, .3);
+    -webkit-app-region: no-drag;
 }
 
 .btn.btn-big {
@@ -376,6 +377,7 @@ ul#topBar #windowTitle {
     color: #222;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     font-size: 15px;
+    -webkit-app-region: no-drag;
 }
 .tabBar > .btn:hover,
 .tabBar > .btn:active,
