--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,8 @@ ul#topBar #windowTitle {
     /* background: rgba(0, 0, 0, .2); */
     /* color: #aaa; */
     background: hsla(0, 0%, 100%, 0.5);
-    color: #222;
+    /* color: #222; */
+    color: #111;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .2);
     font-size: 15px;
     -webkit-app-region: no-drag;
@@ -375,7 +376,7 @@ ul#topBar #windowTitle {
 #imgUsage {
     top: 0;
     left: 0;
-    background: red;
+    background: rgba(0, 0, 0, .35);
     /*rgba(0, 0, 0, .2);*/
     height: 37px;
     margin: 0;
@@ -415,7 +416,7 @@ ul#topBar #windowTitle {
 .svg-icon {
     height: 22px;
     width: 22px;
-    filter: invert(90%);
+    filter: invert(95%);
     position: absolute;
     transform: translate(-30px, -3px);
     transition: transform .5s .1s;
