--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* animations */
-@-webkit-keyframes buffering {
+@keyframes buffering {
     0% {
         transform: rotate(0deg);
     }
@@ -14,6 +14,14 @@
         border-radius: 50% 50%;
         transform: rotate(270deg);
     }
+}
+@keyframes idleOn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+@keyframes idleOff {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 
@@ -466,14 +474,21 @@ ul#topBar #windowTitle {
     width: 100%;
     height: 100%;
     z-index: 10000;
-    background: rgba(0, 0, 0, .75);
+    background: rgba(0, 0, 0, .5);
     transition: all .4s;
+    animation: idleOn 0s ease-out;
+}
+.overlay.hidden {
+    animation: idleOff .2s ease-out;
 }
 .overlay > center {
     position: fixed;
-    bottom: 180px;
+    /* bottom: 180px; */
     left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 22pt;
+    /* text-transform: uppercase; */
 }
 .overlay > .loading {
     position: fixed;
