--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,9 @@ html, body {
     max-height: 100%;
     height: 100%;
     overflow: hidden;
-    font-family: 'Arial';
+    /* font-family: 'Arial'; */
+    font-family: 'rubik', 'Arial';
+    font-weight: 400;
 }
 .imageCover {
     content: '';
@@ -236,7 +238,8 @@ button.btn {
     padding: 0 10px;
     max-width: 100px;
     text-align: center;
-    font-weight: 600;
+    /* font-weight: 600; */
+    font-weight: 500;
     font-size: 11pt;
 }
 .btn-disabled {
@@ -393,7 +396,8 @@ ul#topBar #windowTitle {
     flex: 1 65%;
     /* background: #136ec4; */
     background: hsla(0, 0%, 100%, 0.85);
-    font-weight: bold;
+    /* font-weight: bold; */
+    font-weight: 500;
     /* color: #fff; */
     /* background: rgba(0, 0, 0, 0); */
 }
@@ -458,7 +462,8 @@ ul#topBar #windowTitle {
     opacity: 0;
     z-index: 0;
     transition: opacity .3s;
-    font-weight: bold;
+    /* font-weight: bold; */
+    font-weight: 500;
     text-shadow: 0 1px 3px rgba(255, 255, 255, 0.2);
 }
 .tabBar > .btn > #imgUsage:hover > #usagePcValue {
